src/test/ui/parser/require-parens-for-chained-comparison.stderr
error: chained comparison operators require parentheses
  --> $DIR/require-parens-for-chained-comparison.rs:5:11
   |
LL |     false == false == false;
   |           ^^^^^^^^^^^

error: chained comparison operators require parentheses
  --> $DIR/require-parens-for-chained-comparison.rs:8:11
   |
LL |     false == 0 < 2;
   |           ^^^^^^

error: chained comparison operators require parentheses
  --> $DIR/require-parens-for-chained-comparison.rs:13:6
   |
LL |     f<X>();
   |      ^^^
help: use `::<...>` instead of `<...>` if you meant to specify type arguments
   |
LL |     f::<X>();
   |      ^^

error: chained comparison operators require parentheses
  --> $DIR/require-parens-for-chained-comparison.rs:17:6
   |
LL |     f<Result<Option<X>, Option<Option<X>>>(1, 2);
   |      ^^^^^^^^
help: use `::<...>` instead of `<...>` if you meant to specify type arguments
   |
LL |     f::<Result<Option<X>, Option<Option<X>>>(1, 2);
   |      ^^

error[E0308]: mismatched types
  --> $DIR/require-parens-for-chained-comparison.rs:8:14
   |
LL |     false == 0 < 2;
   |              ^ expected bool, found integer
   |
   = note: expected type `bool`
              found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/require-parens-for-chained-comparison.rs:8:18
   |
LL |     false == 0 < 2;
   |                  ^ expected bool, found integer
   |
   = note: expected type `bool`
              found type `{integer}`

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0308`.
